<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_PneumaticAxisControl" Id="{9b02699a-1208-07c7-0d58-2a295cd065b4}">
    <Declaration><![CDATA[TYPE ST_PneumaticAxisControl :
STRUCT
    bExtend: BOOL; //Variable to control solenoid valve from PLC
    bRetract: BOOL; //Variable to control solenoid valve from PLC
    bInterlock: BOOL; //Input interlock signal for the movement
    bReset: BOOL; //Reset signal from EPICS
END_STRUCT
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>